--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,9 @@
 	<head>
 		<title>Aelly Liu Portfolio</title>
 		<meta charset="UTF-8">
+		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+		<link rel="stylesheet" type="text/css" href="assets/css/style_rigid.css">
+		<link rel="stylesheet" type="text/css" href="assets/css/contact.css">
 	</head>
 
 	<body>
@@ -10,34 +13,35 @@
 			<h1>Aelly Liu</h1>
 		</header>
 		<nav>
-			<a href="index.html">About</a>
-			<a href="portfolio.html">Portfolio</a>
+			|<a href="index.html">About</a>
+			|<a href="portfolio.html">Portfolio</a>
 			<a href="contact.html">Contact</a>
 		</nav>
+		<div id="wrapper">
+			<section>
+				<h2>Contact</h2>
+				<hr>
+				<form action="#" method="get">
+	 			  Name <input type="text" name="name" placeholder="John Doe"><br>
+				  Email <input type="text" name="email" placeholder="example@gmail.com"><br>
+				  Message <textarea name="message"></textarea><br>
+				  <input class="submitBtn" type="submit" value="Submit">
+				</form>
 
-		<section>
-			<h2>Contact</h2>
-			<hr>
-			<form action="#" method="get">
- 			  Name <input type="text" name="name"><br>
-			  Email <input type="text" name="email"><br>
-			  Message <textarea name="message"></textarea><br>
-			  <input type="submit" value="Submit">
-			</form>
 
-
-		</section>
-		
-		<aside>
-			<h2>Connect with Me</h2>
-			<hr>
-			<img src="assets/images/githubLogoR.png" alt="gihub logo">
-			<img src="assets/images/linkedinLogoR.png" alt="Linkedin logo">
-			<img src="assets/images/stackoverflowLogoR.png" alt="stackoverflow logo">
-		</aside>
-
+			</section>
+			
+			<aside>
+				<h2>Connect with Me</h2>
+				<hr>
+				<img src="assets/images/githubLogoR.png" alt="gihub logo">
+				<img src="assets/images/linkedinLogoR.png" alt="Linkedin logo">
+				<img src="assets/images/stackoverflowLogoR.png" alt="stackoverflow logo">
+			</aside>
+		</div>
 		<footer>
 			<h5>&copy; Copyright 2016 Aelly Liu</h5>
+			<!-- <p>&copy; Copyright 2016 Aelly Liu</p> -->
 		</footer>
 
 	</body>
